[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.7.1"]

[project]
name = "omoment"
authors = [
    { name = "Tomas Protivinsky", email = "tomas.protivinsky@gmail.com" },
]
readme = "README.rst"
requires-python = ">=3.7"
dynamic = ["version", "description"]
keywords = [
    "statistics",
    "mean",
    "variance",
    "distributed",
    "estimation",
    "efficient",
    "additive",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "numpy >= 1.19.0",
    "pandas >= 1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0.0",
    "pytest-cov >= 3.0.0",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 75"

[tool.coverage.run]
source = ["omoment"]

[project.urls]
Homepage = "https://github.com/protivinsky/omoment"
Documentation = "https://protivinsky.github.io/omoment"

